--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>My CloudFront Site</title>
   </head>
   <body>
-    <h1>Happy Coding</h1>
+    <h1>Happy Coding!!</h1>
     <p>This is a demo of a cloudfront site with S3 failover</p>
   </body>
 </html>
